# Remixbuddy

./: .gitignore  GEMINI.md
contracts/schemas/: analysis.schema.json  error.schema.json  job_status.schema.json  stems.schema.json
docs/: API_CONTRACT_NOTES.md  BPM_VALIDATION_PROTOCOL.md  ENGINEERING_ADDENDUM_v0.2a.md  LESSONS_LEARNED.md  PRODUCT_DECISIONS.md  README_DOCS_INDEX.md  ROADMAP_CURRENT.md  remixbuddy_concept_v1.docx  remixbuddy_engineering_spec_v4.docx  status_report.md  v0.1_release_notes.md  v0.2a_release_notes.md
docs/_archive/: Abschlussbericht_BPM_Analyse.docx  api_stem_separation.md  bpm_decision_logic.md  file_structure.md  gui_stem_separation.md  limitations.md  pipeline_stem_separation.md  stem_bpm_analysis.md  stem_separation.md
jobs/job_sep_c9391130/meta/: manifest.json  run_log.json
libs/JUCE/examples/GUI/: GraphicsDemo.h  WidgetsDemo.h
libs/JUCE/modules/juce_audio_basics/: juce_audio_basics.h
plan/00_Project_Core/: Engineering_Spec_v4.docx  Product_Decisions.md  Vision.md
plan/01_Architecture/: API_Contracts.md  Data_Models.md  System_Architecture.md
plan/02_Roadmap/: MVP_Scope.md  Roadmap.md
plan/03_Team_Questions/: Questions_Log.md
plan/04_Meetings/: JourFix_Notes.md
plan/06_Testing/: Test_Spec.md
plan/07_Lessons_Learned/: Lessons_Learned.md
plugin/: CMakeLists.txt
plugin/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  ServiceConnector.cpp  ServiceConnector.h
scripts/: build_plugin.ps1  test_analysis_v01.py  verify_bpm.py
service/: main.py  models.py  requirements.txt  worker.py
(+52 files in other folders)
